assets/css/style.css
/* ... */
@media (max-width: 1200px) {
  main .key-features dl {
    margin-top: 100px;
  }
}
@media (max-width: 992px) {
  main .key-features dl {
    margin-top: 20px;
  }
}
@media (max-width: 767px) {
  main .key-features dl {
    margin-top: 0;
    text-align: left;
  }
}
main .key-features dl dt {
  font-size: 48px;
  line-height: 58px;
  margin-bottom: 24px;
  font-weight: normal;
  letter-spacing: -0.02em;
}
main .key-features dl dt span {
  font-family: "Lato", sans-serif;
  font-size: 14px;
  line-height: 150%;
  color: #1F1F23;
  background: #89EFDF;
  padding: 6px 12px;
  border-radius: 8px;
  display: inline-block;
  vertical-align: middle;
}
@media (max-width: 1200px) {
  main .key-features dl dt {
    font-size: 44px;
  }
}
@media (max-width: 992px) {
  main .key-features dl dt {
    font-size: 36px;
    line-height: 46px;
  }
}
@media (max-width: 767px) {
  main .key-features dl dt {
    font-size: 24px;
    line-height: 34px;
    font-weight: 700;
    margin-bottom: 8px;
  }
}
main .key-features dl dd {
  font-family: "Lato", sans-serif;
  font-weight: 400;
  font-size: 18px;
  line-height: 160%;
  letter-spacing: -0.01em;
  color: #7C7D89;
  margin-bottom: 0;
}
@media (max-width: 767px) {
  main .key-features dl dd {
    font-size: 16px;
    line-height: 150%;
  }
}
main .key-features .row > * {
  position: relative;
  z-index: 1;
}
main .key-features .row1 {
  position: relative;
}
main .key-features .row1:before {
  position: absolute;
  content: "";
  background: url("../images/line.png") no-repeat left bottom;
  top: 0;
  left: calc(50% - 50px);
  right: 0;
  bottom: -70px;
  /* @media (max-width: 992px) {
    left: 33%;
    width: 270px;
  } */
}
@media (max-width: 1200px) {
  main .key-features .row1:before {
    background-size: 100%;
    left: calc(50% - 40px);
    width: 230px;
  }
}
@media (max-width: 992px) {
  main .key-features .row1:before {
    left: 46%;
    width: 230px;
  }
}
@media (max-width: 767px) {
  main .key-features .row1:before {
    background: none;
    left: 0;
    bottom: 0;
  }
}
main .key-features .row2 {
  position: relative;
}
main .key-features .row2:before {
  position: absolute;
  content: "";
  background: url("../images/line2.png") no-repeat right bottom;
  top: 0;
  left: 0;
  right: calc(50% - 100px);
  bottom: -70px;
}
@media (max-width: 1200px) {
  main .key-features .row2:before {
    background-size: 100%;
    left: auto;
    right: calc(50% - 80px);
    width: 230px;
  }
}
@media (max-width: 992px) {
  main .key-features .row2:before {
    right: 40%;
    width: 260px;
  }
}
@media (max-width: 767px) {
  main .key-features .row2:before {
    background: none;
    right: 0;
    bottom: 0;
  }
}
main .how-much {
  background: #1D2A33;
  position: relative;
  padding: 77px 0 120px 0;
  overflow: hidden;
}
@media (max-width: 767px) {
  main .how-much {
    padding: 54px 0 155px 0;
  }
}
main .how-much::before {
  position: absolute;
  content: "";
  background: url("../images/how-much-arrow.svg") no-repeat top right;
  top: 55px;
  left: 0;
  right: 20px;
  bottom: 0;
  /* animation-name: rightToLeft;
  animation-duration: 1s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate; */
}
@media (max-width: 1024px) {
  main .how-much::before {
    background-size: 100%;
    left: auto;
    width: 100px;
  }
}
@media (max-width: 992px) {
  main .how-much::before {
    background-size: 100%;
    left: auto;
    width: 100px;
  }
}
@media (max-width: 767px) {
  main .how-much::before {
    top: 20px;
    width: 60px;
  }
}
main .how-much::after {
  position: absolute;
  content: "";
  background: url("../images/how-much-arrow2.svg") no-repeat bottom left;
  top: 0;
  left: 16px;
  right: 0;
  bottom: 65px;
  /* animation-name: leftToRight;
  animation-duration: 1s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate; */
}
@media (max-width: 1024px) {
  main .how-much::after {
    background-size: 100%;
    right: auto;
    width: 100px;
  }
}
@media (max-width: 992px) {
  main .how-much::after {
    background-size: 100%;
    right: auto;
    width: 100px;
  }
}
@media (max-width: 767px) {
  main .how-much::after {
    width: 74px;
    bottom: 36px;
  }
}
main .how-much > * {
  position: relative;
  z-index: 1;
}
main .how-much .bx-tilte {
  font-size: 56px;
  line-height: 67px;
  letter-spacing: -0.02em;
  color: #fff;
  margin-bottom: 80px;
  position: relative;
  z-index: 1;
}
@media (max-width: 992px) {
  main .how-much .bx-tilte {
    font-size: 40px;
  }
}
@media (max-width: 767px) {
  main .how-much .bx-tilte {
    font-size: 40px;
    line-height: 48px;
    margin-bottom: 130px;
  }
}
main .how-much .year {
  overflow: auto;
  display: inline-block;
  height: 67px;
  vertical-align: middle;
  /* width */
  /* Track */
  /* Handle */
  /* Handle on hover */
}
@media (max-width: 992px) {
  main .how-much .year {
    height: 60px;
  }
}
@media (max-width: 767px) {
  main .how-much .year {
    height: 38px;
  }
}
main .how-much .year::-webkit-scrollbar {
  display: none;
}
main .how-much .year::-webkit-scrollbar-track {
  display: none;
}
main .how-much .year::-webkit-scrollbar-thumb {
  display: none;
}
main .how-much .year::-webkit-scrollbar-thumb:hover {
  display: none;
}
main .how-much .year ul {
  -webkit-animation-name: hovered;
          animation-name: hovered;
  -webkit-animation-duration: 10s;
          animation-duration: 10s;
  -webkit-animation-iteration-count: infinite;
          animation-iteration-count: infinite;
  -webkit-animation-timing-function: linear;
          animation-timing-function: linear;
  -webkit-animation-delay: 3s;
          animation-delay: 3s;
  list-style: none;
  margin-bottom: 0;
  padding-left: 0;
}
@-webkit-keyframes hovered {
  from {
    transform: translateY(0);
  }
  to {
    transform: translateY(-100%);
  }
}
/* ... */

